--- a/content/posts/w17-2023.md
+++ b/content/posts/w17-2023.md
@@ -30,6 +30,8 @@ tags:
 - updates
 ---
 
+{{< figure src="/img/w17-2023-smartcontractstack.png" alt="7 robots sending each other cryptocurrency in their minds" position="center" style="border-radius: 7px;" caption="7 robots sending each other cryptocurrency in their minds" captionPosition="center" captionStyle="color: white;" >}}
+
 # news
 
 [Transactions on Arbitrum Surpass Bitcoin — Along With Fees - Blockworks](https://blockworks.co/news/transactions-arbitrum-bitcoin-fees) {{< sub "(blockworks.co)" >}} - Even as transactions accelerate, the cost to use the Arbitrum blockchain remains low
